--- a/emotes.html
+++ b/emotes.html
@@ -6,8 +6,21 @@
     <title>Emotes</title>
 </head>
 <body>
-	<h1>Hello feeeesh</h1>
+	<h1>Hello testing</h1>
 	<div id="test">
+	</div>
+	
+	<div>
+		<table>
+			<tr>
+				<th> Tag </th>
+				<th> Image </th>
+			</tr>
+			<tr>
+				<th> :ahh: </th>
+				<th> <img src="/assets/ahh.gif"> </th>
+			</tr>
+		</table>
 	</div>
 </body>
 </html>
