--- a/emotes.html
+++ b/emotes.html
@@ -2,23 +2,48 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="emotes.css" />
     <meta charset="utf-8"/>
     <title>Emotes</title>
 </head>
 <body>
-	<h1>Hello testing</h1>
+	<h1>Emotes!</h1>
 	<div id="test">
 	</div>
 	
 	<div>
-		<table>
+		<table style="width:100%;border:0px solid black;">
 			<tr>
 				<th> Tag </th>
 				<th> Image </th>
 			</tr>
 			<tr>
 				<th> :ahh: </th>
-				<th> <img src="/assets/ahh.gif"> </th>
+				<th> <img src="assets/ahh.gif"> </th>
+			</tr>
+			<tr>
+				<th> :Beemote: </th>
+				<th> <img src="assets/Beemote.png"> </th>
+			</tr>
+			<tr>
+				<th> :BuiltDiff: </th>
+				<th> <img src="assets/BuiltDiff.gif"> </th>
+			</tr>
+			<tr>
+				<th> :clown: </th>
+				<th> <img src="assets/clown.gif"> </th>
+			</tr>
+			<tr>
+				<th> :GretaRage: </th>
+				<th> <img src="assets/GretaRage.png"> </th>
+			</tr>
+			<tr>
+				<th> :sad: </th>
+				<th> <img src="assets/sad.gif"> </th>
+			</tr>
+			<tr>
+				<th> :xd: </th>
+				<th> <img src="assets/xd.gif"> </th>
 			</tr>
 		</table>
 	</div>
