--- a/emotes.html
+++ b/emotes.html
@@ -16,34 +16,35 @@
 			<tr>
 				<th> Tag </th>
 				<th> Image </th>
+				<th id="spacer">    </th>
+				<th> Tag </th>
+				<th> Image </th>
 			</tr>
 			<tr>
 				<th> :ahh: </th>
 				<th> <img src="assets/ahh.gif"> </th>
-			</tr>
-			<tr>
+				<th id="spacer">    </th>
 				<th> :Beemote: </th>
 				<th> <img src="assets/Beemote.png"> </th>
 			</tr>
 			<tr>
 				<th> :BuiltDiff: </th>
 				<th> <img src="assets/BuiltDiff.gif"> </th>
-			</tr>
-			<tr>
+				<th id="spacer">    </th>
 				<th> :clown: </th>
 				<th> <img src="assets/clown.gif"> </th>
 			</tr>
 			<tr>
 				<th> :GretaRage: </th>
 				<th> <img src="assets/GretaRage.png"> </th>
-			</tr>
-			<tr>
+				<th id="spacer">    </th>
 				<th> :sad: </th>
 				<th> <img src="assets/sad.gif"> </th>
 			</tr>
 			<tr>
 				<th> :xd: </th>
 				<th> <img src="assets/xd.gif"> </th>
+				<th id="spacer">    </th>
 			</tr>
 		</table>
 	</div>
