--- a/emotes.html
+++ b/emotes.html
@@ -45,6 +45,8 @@
 				<th> :xd: </th>
 				<th> <img src="assets/xd.gif"> </th>
 				<th id="spacer">    </th>
+				<th> :NiceTry: </th>
+				<th> <img src="assets/NiceTry.gif"> </th>
 			</tr>
 		</table>
 	</div>
