--- a/emotes.html
+++ b/emotes.html
@@ -48,6 +48,11 @@
 				<th> :NiceTry: </th>
 				<th> <img src="assets/NiceTry.gif"> </th>
 			</tr>
+			<tr>
+				<th> :ByeBye: </th>
+				<th> <img src="assets/ByeBye.gif"> </th>
+				<th id="spacer">    </th>
+			</tr>
 		</table>
 	</div>
 </body>
